<resources>
    <string name="app_name">InfuSense</string>
    <string name="cd_button_back">button back</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="desc_selamat_datang">Untuk mulai memantau infus, silakan masukkan batasan volume cairan dan laju tetesan sesuai arahan perawat. Aplikasi akan memberi notifikasi atau alarm otomatis jika infus hampir habis atau tetesannya tidak stabil.</string>
    <string name="batasan_minimum_ml">Batasan Minimum (ml)</string>
    <string name="zero_value">0</string>
    <string name="batasan_maksimum_ml">Batasan Maksimum (ml)</string>
    <string name="five_hundred_value">500</string>
    <string name="one_hundred_twenty_value">120</string>
    <string name="laju_tetesan_tpm">Laju Tetesan (TPM)</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="hint_nama_pasien">Masukkan nama pasien (opsional)</string>
    <string name="nama_rumah_sakit">Nama Rumah Sakit</string>
    <string name="hint_nama_rumah_sakit">Masukkan nama rumah sakit (opsional)</string>
    <string name="simpan_batas_peringatan">Simpan Batas Peringatan</string>
    <string name="cd_logo_image">logo image</string>
    <string name="cd_icon_drop_rate">icon drop rate</string>
    <string name="drop_rate">Drop Rate</string>
    <string name="cd_icon_notification">icon notification</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="cd_icon_alarm">icon alarm</string>
    <string name="cd_icon_patient_information">icon patient information</string>
    <string name="informasi_pasien">Informasi Pasien</string>
    <string name="ubah_batas_peringatan">Ubah Batas Peringatan</string>
    <string name="hapus_semua_riwayat">Hapus Semua Riwayat</string>
    <string name="hello_masukkan_kode_kamar_pasien">Hello! Masukkan kode kamar pasien:</string>
    <string name="hint_room_input">Contoh: room-001-bed-01</string>
    <string name="simpan">Simpan</string>
    <string name="status_initialize">Status: Initialize</string>
    <string name="current_volume">Current Volume</string>
    <string name="loading">loading</string>
    <string name="current_drop_rate">Current Drop Rate</string>
    <string name="interval">Interval:</string>
    <string name="status_good">Status: Good</string>
    <string name="tpm">- TPM</string>
    <string name="title_topappbar">InfuSense</string>
    <string name="cd_icon_arrow_down">icon arrow down</string>
    <string name="cd_icon_status">icon status</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_home">Home</string>
    <string name="desc_information_pasien">Pasien: %1$s\n%2$s</string>
    <string name="add_batasan">Tambah Batasan</string>
    <string name="edit_batasan">Edit Batasan</string>
</resources>