<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingHorizontal="8dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_button_back"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <TextView
            android:id="@+id/textGreetingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/selamat_datang"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGreetingDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:justificationMode="inter_word"
            android:text="@string/desc_selamat_datang"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGreetingTitle" />

        <TextView
            android:id="@+id/labelMinTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/batasan_minimum_ml"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGreetingDescription" />

        <TextView
            android:id="@+id/labelMinValueStart"
            android:layout_width="4dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/zero_value"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelMinTitle" />

        <SeekBar
            android:id="@+id/seekBarMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="500"
            app:layout_constraintEnd_toStartOf="@id/labelMinValueEnd"
            app:layout_constraintStart_toEndOf="@id/labelMinValueStart"
            app:layout_constraintTop_toBottomOf="@id/labelMinTitle" />

        <TextView
            android:id="@+id/labelMinValueEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/five_hundred_value"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/textMinCurrentValue"
            app:layout_constraintTop_toBottomOf="@id/labelMinTitle" />

        <EditText
            android:id="@+id/textMinCurrentValue"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/zero_value"
            android:textColor="@color/blue_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/seekBarMin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/seekBarMin" />

        <TextView
            android:id="@+id/textErrorMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarMin" />

        <TextView
            android:id="@+id/labelMaxTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/batasan_maksimum_ml"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textErrorMin" />

        <TextView
            android:id="@+id/labelMaxValueStart"
            android:layout_width="4dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/zero_value"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelMaxTitle" />

        <SeekBar
            android:id="@+id/seekBarMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="500"
            app:layout_constraintEnd_toStartOf="@id/labelMaxValueEnd"
            app:layout_constraintStart_toEndOf="@id/labelMaxValueStart"
            app:layout_constraintTop_toBottomOf="@id/labelMaxTitle" />

        <TextView
            android:id="@+id/labelMaxValueEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/five_hundred_value"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/textMaxCurrentValue"
            app:layout_constraintTop_toBottomOf="@id/labelMaxTitle" />

        <EditText
            android:id="@+id/textMaxCurrentValue"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/zero_value"
            android:textColor="@color/blue_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/seekBarMax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/seekBarMax" />

        <TextView
            android:id="@+id/textErrorMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarMax" />

        <TextView
            android:id="@+id/labelDripTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/laju_tetesan_tpm"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textErrorMax" />

        <TextView
            android:id="@+id/labelDripValueStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zero_value"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelDripTitle" />

        <SeekBar
            android:id="@+id/seekBarDrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="120"
            app:layout_constraintEnd_toStartOf="@id/labelDripValueEnd"
            app:layout_constraintStart_toEndOf="@id/labelDripValueStart"
            app:layout_constraintTop_toBottomOf="@id/labelDripTitle" />

        <TextView
            android:id="@+id/labelDripValueEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/one_hundred_twenty_value"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/textDripCurrentValue"
            app:layout_constraintTop_toBottomOf="@id/labelDripTitle" />

        <EditText
            android:id="@+id/textDripCurrentValue"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/zero_value"
            android:textColor="@color/blue_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/seekBarDrip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/seekBarDrip" />

        <TextView
            android:id="@+id/textErrorDrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarDrip" />

        <TextView
            android:id="@+id/labelPatientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/nama_pasien"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textErrorDrip" />

        <EditText
            android:id="@+id/inputPatientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_nama_pasien"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPatientName" />

        <TextView
            android:id="@+id/labelHospitalName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/nama_rumah_sakit"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPatientName" />

        <EditText
            android:id="@+id/inputHospitalName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_nama_rumah_sakit"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelHospitalName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_edit_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_button"
            android:text="@string/simpan_batas_peringatan"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
